--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,92 @@
 version: "3.1"
 services:
-  idm:
+
+  mongo-db:
+    image: mongo:3.6
+    hostname: mongo-db
+    container_name: db-mongo
+    ports:
+        - "27017:27017"
+    networks:
+        - default
+    command: --bind_ip_all --smallfiles
+    volumes:
+      - mongo-db:/data
+
+  orion:
+    image: fiware/orion:latest
+    hostname: orion
+    container_name: fiware-orion
+    depends_on:
+        - mongo-db
+    networks:
+        - default
+    expose:
+        - "1026"
+    ports:
+        - "1026:1026"
+    command: -dbhost mongo-db -logLevel DEBUG
+
+  iot-agent:
+    image: fiware/iotagent-ul:1.6.0
+    hostname: iot-agent
+    container_name: fiware-iot-agent
+    depends_on:
+        - mongo-db
+    networks:
+        - default
+    ports:
+        - "4041:4041"
+        - "7896:7896"
+    environment:
+        - "IOTA_CB_HOST=orion" # name of the context broker to update context
+        - "IOTA_CB_PORT=1026" # port the context broker listens on to update context
+        - "IOTA_NORTH_PORT=4041"
+        - "IOTA_REGISTRY_TYPE=mongodb" #Whether to hold IoT device info in memory or in a database
+        - "IOTA_LOG_LEVEL=DEBUG" #The log level of the IoT Agent
+        - "IOTA_TIMESTAMP=true"
+        - "IOTA_MONGO_HOST=mongo-db" # The host name of ongoDB
+        - "IOTA_MONGO_PORT=27017" # The port mongoDB is listening on
+        - "IOTA_MONGO_DB=iotagentul" # The name of the database used in mongoDB
+        - "IOTA_HTTP_PORT=7896" # The port used for device traffic over HTTP
+        - "IOTA_PROVIDER_URL=http://iot-agent:4041"
+
+  context-provider:
+    image: fiware/tutorials.context-provider
+    hostname: context-provider
+    container_name: context-provider
+    networks:
+      default:
+        ipv4_address: 172.18.1.7
+    expose:
+        - "3000"
+        - "3001"
+    ports:
+        - "3000:3000"
+        - "3001:3001"
+    environment:
+        - "DEBUG=proxy:*"
+        - "WEB_APP_PORT=3000" # Port used by the content provider proxy and web-app for viewing data
+        - "IOTA_HTTP_HOST=iot-agent"
+        - "IOTA_HTTP_PORT=7896"
+        - "DUMMY_DEVICES_PORT=3001" # Port used by the dummy IOT devices to receive commands
+        - "DUMMY_DEVICES_TRANSPORT=HTTP" # Default transport used by dummy Io devices
+        - "DUMMY_DEVICES_API_KEY=4jggokgpepnvsb2uv4s40d59ov"
+        - "CONTEXT_BROKER=http://orion:1026/v2" # URL of the context broker to update context
+        - "OPENWEATHERMAP_KEY_ID=<ADD_YOUR_KEY_ID>"
+        - "TWITTER_CONSUMER_KEY=<ADD_YOUR_CONSUMER_KEY>"
+        - "TWITTER_CONSUMER_SECRET=<ADD_YOUR_CONSUMER_SECRET>"
+        - "KEYROCK_URL=http://localhost"
+        - "KEYROCK_IP_ADDRESS=http://172.18.1.5"
+        - "KEYROCK_PORT=3005"
+        - "KEYROCK_CLIENT_ID=tutorial-dckr-site-0000-xpresswebapp"
+        - "KEYROCK_CLIENT_SECRET=tutorial-dckr-site-0000-clientsecret"
+        - "CALLBACK_URL=http://localhost:3000/login"
+
+  keyrock:
     image: fiware-idm-params
-    container_name: idm
-    hostname: idm
+    container_name: fiware-keyrock
+    hostname: keyrock
     networks:
       default:
         ipv4_address: 172.18.1.5
@@ -12,6 +95,7 @@ services:
     ports:
       - "3005:3005"
     environment:
+      - DEBUG=idm:*
       - DATABASE_HOST=mysql-db
       - IDM_DB_PASS_FILE=/run/secrets/my_secret_data
       - IDM_DB_USER=root
@@ -51,6 +135,7 @@ networks:
         - subnet: 172.18.1.0/24
 volumes:
   mysql-db:
+  mongo-db:
 
 secrets:
   my_secret_data:
