Update to use standard Keyrock.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     command: -dbhost mongo-db -logLevel DEBUG
 
   iot-agent:
-    image: fiware/iotagent-ul:1.6.0
+    image: fiware/iotagent-ul
     hostname: iot-agent
     container_name: fiware-iot-agent
     depends_on:
@@ -86,7 +86,7 @@ services:
         - "CALLBACK_URL=http://localhost:3000/login"
 
   keyrock:
-    image: fiware-idm-params
+    image: fiware/idm
     container_name: fiware-keyrock
     hostname: keyrock
     networks:
@@ -105,7 +105,7 @@ services:
       - IDM_PORT=3005
       - IDM_ADMIN_USER=alice
       - IDM_ADMIN_EMAIL=alice-the-admin@test.com
-      - IDM_ADMIN_PASS=fiware 
+      - IDM_ADMIN_PASS=test
     secrets:                
       - my_secret_data
 
