Add alias for IoT Sensors

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,10 +51,10 @@ services:
         - "IOTA_HTTP_PORT=7896" # The port used for device traffic over HTTP
         - "IOTA_PROVIDER_URL=http://iot-agent:4041"
 
-  context-provider:
+  tutorial:
     image: fiware/tutorials.context-provider
-    hostname: context-provider
-    container_name: context-provider
+    hostname: tutorial
+    container_name: fiware-tutorial
     depends_on:
         - orion
         - iot-agent
@@ -62,6 +62,9 @@ services:
     networks:
       default:
         ipv4_address: 172.18.1.7
+        aliases:
+          - iot-sensors
+          - context-provider
     expose:
         - "3000"
         - "3001"
