--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - mongo-db:/data
 
   orion:
-    image: fiware/orion
+    image: fiware/orion:2.0.0
     container_name: fiware-orion
     depends_on:
         - mongo-db
@@ -27,7 +27,7 @@ services:
     command: -dbhost mongo-db -logLevel DEBUG
 
   iot-agent:
-    image: fiware/iotagent-ul
+    image: fiware/iotagent-ul:1.7.0
     hostname: iot-agent
     container_name: fiware-iot-agent
     depends_on:
@@ -93,7 +93,7 @@ services:
         - "CALLBACK_URL=http://localhost:3000/login"
 
   keyrock:
-    image: fiware/idm:7.0.2
+    image: fiware/idm:7.4.0
     container_name: fiware-keyrock
     hostname: keyrock
     networks:
