--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
     ports:
         - "1026:1026"
     command: -dbhost mongo-db -logLevel DEBUG
+    healthcheck:
+      test: curl --fail -s http://localhost:1026/version || exit 1
 
   iot-agent:
     image: fiware/iotagent-ul:1.8.0
@@ -50,6 +52,8 @@ services:
         - "IOTA_MONGO_DB=iotagentul" # The name of the database used in mongoDB
         - "IOTA_HTTP_PORT=7896" # The port used for device traffic over HTTP
         - "IOTA_PROVIDER_URL=http://iot-agent:4041"
+    healthcheck:
+      test: curl --fail -s http://localhost:4041/iot/about || exit 1
 
   tutorial:
     image: fiware/tutorials.context-provider
@@ -91,6 +95,8 @@ services:
         - "KEYROCK_CLIENT_ID=tutorial-dckr-site-0000-xpresswebapp"
         - "KEYROCK_CLIENT_SECRET=tutorial-dckr-site-0000-clientsecret"
         - "CALLBACK_URL=http://localhost:3000/login"
+    healthcheck:
+      test: curl --fail -s http://localhost:3000/version || exit 1
 
   keyrock:
     image: fiware/idm:7.5.1
@@ -118,6 +124,8 @@ services:
       - IDM_ADMIN_PASS=test
     secrets:                
       - my_secret_data
+    healthcheck:
+      test: curl --fail -s http://localhost:3005/version || exit 1
 
   mysql-db:
     restart: always
