--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -153,8 +153,8 @@ networks:
       config:
         - subnet: 172.18.1.0/24
 volumes:
-  ? mysql-db
-  ? mongo-db
+  mysql-db: ~
+  mongo-db: ~
 
 secrets:
   my_secret_data:
