--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,7 +100,7 @@ services:
       test: curl --fail -s http://tutorial:3000/version || exit 1
 
   keyrock:
-    image: fiware/idm:7.5.1
+    image: fiware/idm:7.6.0
     container_name: fiware-keyrock
     hostname: keyrock
     networks:
@@ -113,7 +113,7 @@ services:
       - "3443:3443"
     environment:
       - DEBUG=idm:*
-      - DATABASE_HOST=mysql-db
+      - IDM_DB_HOST=mysql-db
       - IDM_DB_PASS_FILE=/run/secrets/my_secret_data
       - IDM_DB_USER=root
       - IDM_HOST=http://localhost:3005
