Annotate YAML and add disclaimer

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,24 @@
+# WARNING: Do not deploy this tutorial configuration directly to a production environment
+#
+# The tutorial docker-compose files have not been written for production deployment and will not 
+# scale. A proper architecture has been sacrificed to keep the narrative focused on the learning 
+# goals, they are just used to deploy everything onto a single Docker machine. All FIWARE components 
+# are running at full debug and extra ports have been exposed to allow for direct calls to services. 
+# They also contain various obvious security flaws - passwords in plain text, no load balancing,
+# no use of HTTPS and so on. 
+# 
+# This is all to avoid the need of multiple machines, generating certificates, encrypting secrets
+# and so on, purely so that a single docker-compose file can be read as an example to build on, 
+# not use directly. 
+# 
+# When deploying to a production environment, please looking at the SmartSDK Recipes
+# in order to scale up to a proper architecture:
+# 
+# see: https://smartsdk.github.io/smartsdk-recipes/
+#
 version: "3.5"
 services:
-  mongo-db:
-    image: mongo:3.6
-    hostname: mongo-db
-    container_name: db-mongo
-    ports:
-      - "27017:27017"
-    networks:
-      - default
-    command: --bind_ip_all --smallfiles
-    volumes:
-      - mongo-db:/data
-
+  # Orion is the context broker
   orion:
     image: fiware/orion:2.2.0
     container_name: fiware-orion
@@ -27,6 +34,7 @@ services:
     healthcheck:
       test: curl --fail -s http://orion:1026/version || exit 1
 
+  # IoT-Agent is configured for the UltraLight Protocol
   iot-agent:
     image: fiware/iotagent-ul:1.8.0
     hostname: iot-agent
@@ -56,6 +64,38 @@ services:
     healthcheck:
       test: curl --fail -s http://iot-agent:4041/iot/about || exit 1
 
+  # Keyrock is an Identity Management Front-End
+  keyrock:
+    image: fiware/idm:7.6.0
+    container_name: fiware-keyrock
+    hostname: keyrock
+    networks:
+      default:
+        ipv4_address: 172.18.1.5
+    depends_on:
+      - mysql-db
+    ports:
+      - "3005:3005"
+      - "3443:3443"
+    environment:
+      - DEBUG=idm:*
+      - IDM_DB_HOST=mysql-db
+      - IDM_DB_PASS_FILE=/run/secrets/my_secret_data
+      - IDM_DB_USER=root
+      - IDM_HOST=http://localhost:3005
+      - IDM_PORT=3005
+      - IDM_HTTPS_ENABLED=${IDM_HTTPS_ENABLED}
+      - IDM_HTTPS_PORT=3443
+      - IDM_ADMIN_USER=alice
+      - IDM_ADMIN_EMAIL=alice-the-admin@test.com
+      - IDM_ADMIN_PASS=test
+    secrets:
+      - my_secret_data
+    healthcheck:
+      test: curl --fail -s http://localhost:3005/version || exit 1
+
+
+  # Tutorial acts as a series of dummy IoT Sensors over HTTP
   tutorial:
     image: fiware/tutorials.context-provider
     hostname: tutorial
@@ -99,34 +139,20 @@ services:
     healthcheck:
       test: curl --fail -s http://tutorial:3000/version || exit 1
 
-  keyrock:
-    image: fiware/idm:7.6.0
-    container_name: fiware-keyrock
-    hostname: keyrock
-    networks:
-      default:
-        ipv4_address: 172.18.1.5
-    depends_on:
-      - mysql-db
+  # Databases
+  mongo-db:
+    image: mongo:3.6
+    hostname: mongo-db
+    container_name: db-mongo
+    expose:
+      - "27017"
     ports:
-      - "3005:3005"
-      - "3443:3443"
-    environment:
-      - DEBUG=idm:*
-      - IDM_DB_HOST=mysql-db
-      - IDM_DB_PASS_FILE=/run/secrets/my_secret_data
-      - IDM_DB_USER=root
-      - IDM_HOST=http://localhost:3005
-      - IDM_PORT=3005
-      - IDM_HTTPS_ENABLED=${IDM_HTTPS_ENABLED}
-      - IDM_HTTPS_PORT=3443
-      - IDM_ADMIN_USER=alice
-      - IDM_ADMIN_EMAIL=alice-the-admin@test.com
-      - IDM_ADMIN_PASS=test
-    secrets:
-      - my_secret_data
-    healthcheck:
-      test: curl --fail -s http://localhost:3005/version || exit 1
+      - "27017:27017"
+    networks:
+      - default
+    command: --bind_ip_all --smallfiles
+    volumes:
+      - mongo-db:/data
 
   mysql-db:
     restart: always
