--- a/.env
+++ b/.env
@@ -1,1 +1,26 @@
+# Orion variables
+ORION_PORT=1026
+ORION_VERSION=2.2.0
+
+# MongoDB variables
+MONGO_DB_PORT=27017
+MONGO_DB_VERSION=3.6
+
+# IoT Agent Ultralight Variables
+ULTRALIGHT_VERSION=1.9.0
+IOTA_NORTH_PORT=4041
+IOTA_SOUTH_PORT=7896
+
+# Tutorial variables
+TUTORIAL_APP_PORT=3000
+TUTORIAL_DUMMY_DEVICE_PORT=3001
+
+# Keyrock variables
+KEYROCK_VERSION=7.7.0
+KEYROCK_PORT=3005
+KEYROCK_HTTPS_PORT=3443
 IDM_HTTPS_ENABLED=false
+
+# MySQL variables
+MYSQL_DB_VERSION=5.7
+MYSQL_DB_PORT=3306
