--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ MONGO_DB_PORT=27017
 MONGO_DB_VERSION=4.2
 
 # IoT Agent Ultralight Variables
-ULTRALIGHT_VERSION=1.15.0
+ULTRALIGHT_VERSION=1.15.0-distroless
 IOTA_NORTH_PORT=4041
 IOTA_SOUTH_PORT=7896
 
@@ -16,7 +16,7 @@ TUTORIAL_APP_PORT=3000
 TUTORIAL_DUMMY_DEVICE_PORT=3001
 
 # Keyrock variables
-KEYROCK_VERSION=7.9.1
+KEYROCK_VERSION=7.9.1-distroless
 KEYROCK_PORT=3005
 KEYROCK_HTTPS_PORT=3443
 IDM_HTTPS_ENABLED=false
