Fix mongodb volume path to make it persistent
This might need to be fixed in other tutorial files as well.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -168,7 +168,7 @@ services:
     networks:
       - default
     volumes:
-      - mongo-db:/data
+      - mongo-db:/data/db
     healthcheck:
       test: |
         host=`hostname --ip-address || echo '127.0.0.1'`; 
