--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
     container_name: fiware-iot-agent
     depends_on:
       - mongo-db
-      - orion
+      - orion-v2
     networks:
       - default
     ports:
